--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -11,20 +11,23 @@
 <body>
 <div class="container mt-5 shadow-lg p-5" style="width:35%">
     <h2 class="text-center">Registration Form</h2>
-    <form id="empForm" action="/empdata" method="POST">
+    <form id="empForm" action="/empdata" onsubmit="return validation()" method="POST">
         <div class="mb-3">
             <label for="exampleInputName1" class="form-label">Name</label>
-            <input type="text" name="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp">
+            <input type="text" name="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp" autocomplete="off">
+            <span id="nameid" class="text-danger font-weight-bold"></span>
         </div>
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email</label>
-            <input type="email" name="email" class="form-control" id="exampleInputEmail1"
+            <input type="email" name="email" class="form-control" id="exampleInputEmail1" autocomplete="off"
                    aria-describedby="emailHelp">
+                   <span id="emailid" class="text-danger font-weight-bold"></span>
         </div>
         <div class="mb-3">
             <label for="exampleInputPhone1" class="form-label">Phone</label>
-            <input type="tel" name="phone" class="form-control" id="exampleInputPhone1"
+            <input type="tel" name="phone" class="form-control" id="exampleInputPhone1" autocomplete="off"
                    aria-describedby="phoneHelp">
+                   <span id="phoneid" class="text-danger font-weight-bold"></span>
         </div>
         <div class="mb-3">
             <label for="exampleInputAddress1" class="form-label">Address</label>
@@ -34,16 +37,53 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
-<script>
-    document.getElementById("empForm").addEventListener("submit", function (event) {
-        if (!document.getElementById("exampleInputName1").value ||
-            !document.getElementById("exampleInputAddress1").value ||
-            !document.getElementById("exampleInputEmail1").value ||
-            !document.getElementById("exampleInputPhone1").value) {
-            event.preventDefault();
-            alert("All fields are required");
-        }
-    });
+
+<script type="text/javascript">
+  function validation(){
+    const name = document.getElementById('exampleInputName1').value;
+    const email = document.getElementById('exampleInputEmail1').value;
+    const phone = document.getElementById('exampleInputPhone1').value;
+  
+    if(name == "") {
+      document.getElementById('nameid').innerHTML =   " ** please fill the name";
+      return false;
+    }
+    if((name.length < 3) || (name.length >20)) {
+      document.getElementById('nameid').innerHTML = " ** please fill the name between 3 and 20";
+      return false;
+    }
+    {{!-- if(!isNaN(name)) {
+      document.getElementById('nameid').innerHTML " ** please enter character";
+      return false;
+    } --}}
+
+    if(email == "") {
+      document.getElementById('emailid').innerHTML =   " ** please fill the email";
+      return false;
+    }
+    {{!-- if(email.indexOf('@') <= 0) {
+      document.getElementById('emailid').innerHTML =   " ** please fill the correct email fromat @ ";
+      return false;
+    }
+    if(email.charAt(email.length-4)!='.') && (email.charAt(email.length-3)!='.'){
+       document.getElementById('emailid').innerHTML =   " ** please fill the correct email fromat .  ";
+      return false;
+    } --}}
+
+    if(phone == "") {
+      document.getElementById('phoneid').innerHTML =   " ** please fill the phone";
+      return false;
+    }
+    {{!-- if(phone.length!=10) {
+      document.getElementById('phoneid').innerHTML = " ** Phone number should be 10 digits";
+      return false;
+    }
+    if(isNaN(phone)) {
+      document.getElementById('phoneid').innerHTML = " ** Phone number should contains only digits";
+      return false;
+    } --}}
+
+  }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
